--- a/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
@@ -22,8 +22,8 @@ However, developers are encouraged to refresh their knowledge on logic and set t
 A good source is the first 3 chapters in Elements of the Theory of Computation by Lewis and Papadamitrious.
 
 <div class="wrapper">
-  <p>Select the button to preview the document (if delayed, tap F5 to reload)</p>
-  <button style="background-color: #1f64ff; border: 0; color: #fff;" type="button" on="tap:AMP.setState({ myIframeUrl: 'https://docs.google.com/gview?url=http%3A%2F%2Fwww.pdf995.com%2Fsamples%2Fpdf.pdf&embedded=true' })" [hidden]="myIframeUrl">
+  <p>Select the button to preview the document (if loading delayed, tap F5 to reload)</p>
+  <button style="background-color: #1f64ff; border: 0; color: #fff; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px;" type="button" on="tap:AMP.setState({ myIframeUrl: 'https://docs.google.com/gview?url=http%3A%2F%2Fwww.pdf995.com%2Fsamples%2Fpdf.pdf&embedded=true' })" [hidden]="myIframeUrl">
   Elements of the Theory of Computation
   </button>
   <amp-iframe sandbox="allow-scripts allow-same-origin" src="https://google.com/" width="900" height="300" layout="responsive" [src]="myIframeUrl" [hidden]="!myIframeUrl" hidden>
