--- a/pages/content/amp-dev/documentation/tutorial-p/103/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b103.md
@@ -26,7 +26,7 @@ Figure 3.1 shows a representation of some individuals in a domain of people, nat
 <tr>
 <td style="width: 10%; border: none;">
 {% do doc.icons.useIcon('/icons/pizza-vocab.svg') %}
-<svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pizza-vocab"></use></svg>
+<svg width="40%" height="40%"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pizza-vocab"></use></svg>
 </td>
 <td style="width: 90%; border: 1px solid; height: 18px;">
 Individuals are also known as instances.
