--- a/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
@@ -22,7 +22,7 @@ Figure 3.2 shows a representation of some properties.
 
 <table style="width: 100%"><tr>
 <td style="width: 10%; border: none;">
-{{ image('/static/img/pizza/vocab-96x123.svg', 96, 123, layout='intrinsic', alt='') }}
+{{ image('/static/img/pizza/vocab-96x123.svg', 32, 41, layout='fixed', alt='') }}
 </td>
 <td style="width: 90%; border: 1px solid;">
 Properties are similar to properties in Object-Oriented Programming.
