switched from table to emoji

--- a/pages/content/amp-dev/documentation/tutorial-p/103/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b103.md
@@ -17,23 +17,9 @@ For example, “Queen Elizabeth”, “The Queen” and “Elizabeth Windsor” 
 In OWL, it must be explicitly stated that individuals are the same as each other, or different from each other.
 Figure 3.1 shows a representation of some individuals in a domain of people, nations, and relations — in this tutorial we represent individuals as diamonds.
 
-
 {{ image('/static/img/tutorial-p/chapter-03/1-505x166.png', 505, 166, align='center', layout='intrinsic', caption='Figure 3.1: Representation of Individuals') }}
 
 {{ image('/static/img/tutorial-p/chapter-03/2-370x186.png', 370, 186, align='center', layout='intrinsic', caption='Figure 3.2: Representation of Properties') }}
 
-<table style="width: 100%;">
-<tr>
-<td style="width: 10%; border: none;">
-{% do doc.icons.useIcon('/icons/pizza-vocab.svg') %}
-<svg width="40%" height="40%"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pizza-vocab"></use></svg>
-</td>
-<td style="width: 90%; border: 1px solid; height: 18px;">
-Individuals are also known as instances.
-Individuals can be referred to as instances of classes.
-</td>
-</tr>
-</table>
-
-
+> &#x1F4DD; **Note:** Individuals are also known as instances. Individuals can be referred to as instances of classes.
 
