--- a/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
@@ -21,9 +21,10 @@ These property characteristics are explained in detail in Section 4.8.
 Figure 3.2 shows a representation of some properties.
 
 > 📝 **Note:**
-Properties are similar to properties in Object-Oriented Programming.
-However, there are important differences between properties in OWL and Object-Oriented Programming.
-The most important difference is that OWL properties are first class entities that exist independent of classes.
-OOP developers are encouraged to read: <a href="https://www.w3.org/2001/sw/BestPractices/SE/ODSD/" target="_blank" rel="noopener noreferrer">https://www.w3.org/2001/sw/BestPractices/SE/ODSD/</a>
+> Properties are similar to properties in Object-Oriented Programming.
+> However, there are important differences between properties in OWL and Object-Oriented Programming.
+> The most important difference is that OWL properties are first class entities that exist independent of classes.
+> OOP developers are encouraged to read:
+> - <a href="https://www.w3.org/2001/sw/BestPractices/SE/ODSD/" target="_blank" rel="noopener noreferrer">https://www.w3.org/2001/sw/BestPractices/SE/ODSD/</a>
 
 {{ image('/static/img/tutorial-p/chapter-03/3-665x330.png', 665, 330, align='center', layout='intrinsic', caption='Figure 3.3: Representation of Classes containing Individuals') }}
