--- a/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
@@ -20,7 +20,7 @@ They can also be transitive or symmetric.
 These property characteristics are explained in detail in Section 4.8.
 Figure 3.2 shows a representation of some properties.
 
-> 📝 **Note:**
+> &#x1F4DD; **Note:**
 > Properties are similar to properties in Object-Oriented Programming.
 > However, there are important differences between properties in OWL and Object-Oriented Programming.
 > The most important difference is that OWL properties are first class entities that exist independent of classes.
