--- a/pages/content/amp-dev/documentation/tutorial-p/101/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/b104.md
@@ -3,15 +3,13 @@ $title@: YAML
 description@: 'formatting YAML'
 $order: 4
 author: jaygray0919
-content: !g.yaml /shared/data/pizza.yaml
+contents: !g.yaml /shared/data/pizza.yaml
 ---
 
-{% for v in doc.content.overview %}
-<div class="benefit">
-<p class="benefit-text">{{ v.text_01 | safe }}</p>
-<p class="benefit-text">{{ v.text_02 | safe }}</p>
-<p class="benefit-text">{{ v.text_03 | safe }}</p>
-<p class="benefit-text">{{ v.text_04 | safe }}</p>
-</div>
+{% for content in doc.contents.overview %}
+<p class="">{{ _(content.text_01) }}</p>
+<p class="">{{ _(content.text_02) }}</p>
+<p class="">{{ _(content.text_03) }}</p>
+<p class="">{{ _(content.text_04) }}</p>
 {% endfor %}
 
