--- a/pages/content/amp-dev/documentation/tutorial-p/101/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/b104.md
@@ -3,7 +3,7 @@ $title@: YAML
 description@: 'formatting YAML'
 $order: 4
 author: jaygray0919
-contents: !g.yaml /shared/data/pizza.yaml
+contents: !g.yaml /shared/data/pizza-sub.yaml
 ---
 
 {% for content in doc.contents.overview %}
