--- a/pages/content/amp-dev/documentation/tutorial-p/101/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/b104.md
@@ -1,15 +1,18 @@
 ---
-$title@: YAML
-description@: 'formatting YAML'
+$title@: YAML FAQ
+description@: 'injecting YAML FAQ'
 $order: 4
+toc: false
 author: jaygray0919
 contents: !g.yaml /shared/data/pizza-sub.yaml
 ---
 
+## YAML FAQ NL
+
 {% for content in doc.contents.overview %}
-<p class="">{{ _(content.text_01) }}</p>
-<p class="">{{ _(content.text_02) }}</p>
-<p class="">{{ _(content.text_03) }}</p>
-<p class="">{{ _(content.text_04) }}</p>
+<p class=""> {{ _(content.text_01) }} </p>
+<p class=""> {{ _(content.text_02) }} </p>
+<p class=""> {{ _(content.text_03) }} </p>
+<p class=""> {{ _(content.text_04) }} </p>
 {% endfor %}
 
