--- a/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b102.md
@@ -19,10 +19,10 @@ Other concepts from set theory are also implemented in OWL such as Disjoint sets
 An understanding of the basic concepts of set theory will help the user get the most out of OWL but is not required.
 One of the benefits of Protégé is that it presents an intuitive GUI that enables domain experts to define models without a background in set theory.
 However, developers are encouraged to refresh their knowledge on logic and set theory.
-A good source is the first 3 chapters in Elements of the Theory of Computation by Lewis and Papadamitrious.
+A good source is the first 3 chapters in "Elements of the Theory of Computation" by Lewis and Papadamitrious.
 
 <div class="wrapper">
-  <p>Select the button to preview the document (if loading delayed, tap F5 to reload)</p>
+  <p>Select button to preview document (if delayed, tap F5 to reload)</p>
   <button style="background-color: #1f64ff; border: 0; color: #fff; padding: 9px 16px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; cursor:pointer;" type="button" on="tap:AMP.setState({ myIframeUrl: 'https://docs.google.com/gview?url=http%3A%2F%2Fwww.pdf995.com%2Fsamples%2Fpdf.pdf&embedded=true' })" [hidden]="myIframeUrl">
   Elements of the Theory of Computation
   </button>
@@ -30,7 +30,7 @@ A good source is the first 3 chapters in Elements of the Theory of Computation b
     <amp-img placeholder layout="fill" src="https://ontomatica.io/static/image/oscars_placeholder_1.png"></amp-img>
   </amp-iframe>
   <div class="ap-o-sampler-link">
-    <a href="https://www.pdf995.com/samples/pdf.pdf" class="-n">
+    <a href="https://www.pdf995.com/samples/pdf.pdf" target="_blank" class="-n">
     <div class="ap-a-ico -i"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg></div>
     <span class="-r">Open target document</span>
     </a>
