--- a/pages/content/amp-dev/documentation/tutorial-p/103/b105.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b105.md
@@ -24,6 +24,8 @@ OWL and Protégé provide a language that is called Description Logic.
 One of the key features of Description Logic is that these superclass-subclass relationships (aka subsumption relationships) can be computed automatically by a reasoner – more on this later.
 Figure 3.3 shows a representation of some classes containing individuals – classes are represented as ovals, like sets in Venn diagrams.
 
+{{ image('/static/img/tutorial-p/chapter-03/3-665x330.png', 665, 330, align='center', layout='intrinsic', caption='Figure 3.3: Representation of Classes containing Individuals') }}
+
 In OWL classes can be built up of descriptions that specify the conditions that must be satisfied by an individual for it to be a member of the class.
 How to formulate these descriptions will be explained as the tutorial progresses.
 
