--- a/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/b104.md
@@ -12,6 +12,8 @@ contributors:
 
 Properties are binary relations between individuals, i.e., properties link two individuals together.
 
+{{ image('/static/img/tutorial-p/chapter-03/2-370x186.png', 370, 186, align='center', layout='intrinsic', caption='Figure 3.2: Representation of Properties') }}
+
 For example, the property hasFriend might link the individual Biswanath to the individual Michael, or the property hasChild might link the individual Michael to the individual Oriana.
 Properties can have inverses.
 For example, the inverse of hasChild is hasParent.
@@ -26,7 +28,3 @@ Figure 3.2 shows a representation of some properties.
 > The most important difference is that OWL properties are first class entities that exist independent of classes.
 > OOP developers are encouraged to read: <a href="https://www.w3.org/2001/sw/BestPractices/SE/ODSD/" target="_blank" rel="noopener noreferrer">https://www.w3.org/2001/sw/BestPractices/SE/ODSD/</a>
 
-<br>
-<br>
-
-{{ image('/static/img/tutorial-p/chapter-03/3-665x330.png', 665, 330, align='center', layout='intrinsic', caption='Figure 3.3: Representation of Classes containing Individuals') }}
