--- a/pages/content/amp-dev/documentation/tutorial-h/888/103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/103.md
@@ -9,8 +9,8 @@ benefits: !g.yaml /shared/data/benefits.yaml
 
 {% for benefit in doc.benefits.stories.developer %}
   <div class="">
-    <h3 class="">{{ benefit.headline | trim }}</h3>
-    <p class="">{{ benefit.text | trim }}</p>
+    <h3 class=""> {{ _(benefit.headline | trim) }} </h3>
+     <p class=""> {{ _(benefit.text | trim) }} </p>
   </div>
 {% endfor %}
 
