--- a/pages/content/amp-dev/documentation/tutorial-p/101/b105.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/b105.md
@@ -9,6 +9,8 @@ benefits: !g.yaml /shared/data/benefits.yaml
 
 ## YAML Benefits NL
 
+### NL success
+
 {% for benefit in doc.benefits.stories.developer %}
   <div class="">
     <h3 class=""> {{ _(benefit.headline) }} </h3>
