--- a/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b103.md
@@ -18,7 +18,7 @@ Here is my [Homepage][MichaelCurrin home] example 1
 Here is my [Homepage][1] with a numbered reference.
 
 
-### reference links (not visible!)
+### reference links (not visible)
 
 [MichaelCurrin home]: https://michaelcurrin.github.io/
 
