--- a/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
@@ -16,7 +16,23 @@ Ontologies are used to capture knowledge about some domain of interest.
 An ontology describes the concepts in the domain and also the relationships that hold between those concepts.
 Different ontology languages provide different facilities.
 The most recent development in standard ontology languages is OWL from the World Wide Web Consortium (W3C).
-A good primer on the basic concepts of OWL can be found at: <a href="https://www.w3.org/TR/owl2-primer/" target="_blank" rel="noopener noreferrer">https://www.w3.org/TR/owl2-primer/</a>
+Here is a good primer on the basic concepts of OWL.
+
+<div class="wrapper">
+  <p>Select button to preview document</p>
+  <button style="background-color: #1f64ff; border: 0; color: #fff; padding: 9px 16px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; cursor:pointer;" type="button" on="tap:AMP.setState({ myIframeUrl: 'https://www.w3.org/TR/owl2-primer/' })" [hidden]="myIframeUrl">
+  OWL 2 Web Ontology Language Primer
+  </button>
+  <amp-iframe sandbox="allow-scripts allow-same-origin" src="https://www.w3.org/TR/owl2-primer/" width="900" height="300" layout="responsive" [src]="myIframeUrl" [hidden]="!myIframeUrl" hidden>
+    <amp-img placeholder layout="fill" src="https://ontomatica.io/static/image/oscars_placeholder_1.png"></amp-img>
+  </amp-iframe>
+  <div class="ap-o-sampler-link">
+    <a href="https://www.w3.org/TR/owl2-primer/" target="_blank" class="-n">
+    <div class="ap-a-ico -i"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg></div>
+    <span class="-r">Open target document</span>
+    </a>
+  </div>
+</div>
 
 OWL makes it possible to describe concepts in an unambiguous manner based on set theory and logic.
 Complex concepts can be built up out of simpler concepts.
