--- a/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
@@ -10,13 +10,13 @@ $order: 1
 tutorial: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-## YAML test
+## YAML NL test using prefix 'v'
 
 {% for v in doc.tutorial.item %}
-<h3 class="">{{ v.heading_1 | safe }}</h3>
-<p class="">{{ v.heading_2 | safe }}</p>
-<p class="">{{ v.text_1 | trim }}</p>
-<p class="">{{ v.text_2 | trim }}</p>
-<p class="">{{ v.text_3 | safe }}</p>
+<h3 class="">{{ _(v.heading_1 | safe) }}</h3>
+ <p class="">{{ _(v.heading_2 | safe) }}</p>
+ <p class="">{{ _(v.text_1 | trim) }}</p>
+ <p class="">{{ _(v.text_2 | trim) }}</p>
+ <p class="">{{ _(v.text_3 | safe) }}</p>
 {% endfor %}
 
