--- a/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/b102.md
@@ -7,10 +7,13 @@ teaser:
 $order: 2
 ---
 
-## frontmatter substitution SUCCESS
+## Success
+
+- frontmatter substitution
+- NL test
 
 <div class="teaser">
-  <p>{{ _(doc.teaser.text) }}</p>
+  <p> {{ _(doc.teaser.text) }} </p>
 </div>
 
 ## collapsible text
@@ -19,7 +22,7 @@ $order: 2
 <summary>Click to see FM content</summary>
   
 <div class="teaser">
-  <p>{{ _(doc.teaser.text) }}</p>
+  <p> {{ _(doc.teaser.text) }} </p>
 </div>
 
 </details
