--- a/pages/content/amp-dev/documentation/tutorial-h/888/103.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/103.md
@@ -5,7 +5,7 @@ toc: false
 benefits: !g.yaml /shared/data/benefits.yaml
 ---
 
-## YAML test
+## YAML benefits success
 
 {% for benefit in doc.benefits.stories.developer %}
   <div class="">
