--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -10,16 +10,16 @@ $order: 1
 formats:
   - websites
 author: ldodds
-data: !g.yaml /shared/data/tutorial-p.yaml
+contents: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
 ## YAML test
 
-{% for v in doc.data.item %}
-<h3 class=""> {{ _(v.heading_1 | safe) }} </h3>
- <p class=""> {{ _(v.heading_2 | safe) }} </p>
- <p class=""> {{ _(v.text_1 | trim) }} </p>
- <p class=""> {{ _(v.text_2 | trim) }} </p>
- <p class=""> {{ _(v.text_3 | safe) }} </p>
+{% for content in doc.contents.item %}
+<h3 class=""> {{ _(content.heading_1 | safe) }} </h3>
+ <p class=""> {{ _(content.heading_2 | safe) }} </p>
+ <p class=""> {{ _(content.text_1 | trim) }} </p>
+ <p class=""> {{ _(content.text_2 | trim) }} </p>
+ <p class=""> {{ _(content.text_3 | safe) }} </p>
 {% endfor %}
 
