--- a/pages/content/amp-dev/documentation/tutorial-p/101/b105.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/b105.md
@@ -7,13 +7,11 @@ author: jaygray0919
 benefits: !g.yaml /shared/data/benefits.yaml
 ---
 
-## YAML Benefits NL
-
-### NL success
+## NL success
 
 {% for benefit in doc.benefits.stories.developer %}
   <div class="">
-    <h3 class=""> {{ _(benefit.headline) }} </h3>
+   <h3 class=""> {{ _(benefit.headline) }} </h3>
     <p class=""> {{ _(benefit.text) }} </p>
   </div>
 {% endfor %}
