--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -10,16 +10,16 @@ $order: 1
 formats:
   - websites
 author: ldodds
-contents: !g.yaml /shared/data/tutorial-p.yaml
+items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
 ## YAML test
 
-{% for content in doc.contents.item %}
-<h3 class=""> {{ _(content.heading_1 | safe) }} </h3>
- <p class=""> {{ _(content.heading_2 | safe) }} </p>
- <p class=""> {{ _(content.text_1 | trim) }} </p>
- <p class=""> {{ _(content.text_2 | trim) }} </p>
- <p class=""> {{ _(content.text_3 | safe) }} </p>
+{% for item in doc.items.content %}
+<h3 class=""> {{ _(item.heading_1) }} </h3>
+ <p class=""> {{ _(item.heading_2) }} </p>
+ <p class=""> {{ _(item.text_1) }} </p>
+ <p class=""> {{ _(item.text_2) }} </p>
+ <p class=""> {{ _(item.text_3 | safe) }} </p>
 {% endfor %}
 
