--- a/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
@@ -1,22 +1,24 @@
 ---
 $title@: Introduction
 description@: 'Read the introduction'
-$titles:
-  teaser@: Chapter 1
 teaser:
   icon: airplane
   label@: Introduction
+$titles:
+  teaser@: Chapter 1
 $order: 1
-tutorial: !g.yaml /shared/data/tutorial-p.yaml
+formats:
+  - websites
+author: ldodds
+items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-## YAML NL test using prefix 'v'
+## YAML test
 
-{% for v in doc.tutorial.item %}
-<h3 class="">{{ _(v.heading_1 | safe) }}</h3>
- <p class="">{{ _(v.heading_2 | safe) }}</p>
- <p class="">{{ _(v.text_1 | trim) }}</p>
- <p class="">{{ _(v.text_2 | trim) }}</p>
- <p class="">{{ _(v.text_3 | safe) }}</p>
+{% for item in doc.items.content %}
+<h3 class=""> {{ _(item.heading_1) }} </h3>
+ <p class=""> {{ _(item.heading_2) }} </p>
+ <p class=""> {{ _(item.text_1) }} </p>
+ <p class=""> {{ _(item.text_2) }} </p>
+ <p class=""> {{ _(item.text_3 | safe) }} </p>
 {% endfor %}
-
