--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -16,9 +16,9 @@ items: !g.yaml /shared/data/tutorial-p.yaml
 ## YAML test
 
 {% for item in doc.items.content %}
-<h3 class=""> {{ _(item.heading_1) }} </h3>
- <p class=""> {{ _(item.heading_2) }} </p>
- <p class=""> {{ _(item.text_1) }} </p>
- <p class=""> {{ _(item.text_2) }} </p>
- <p class=""> {{ _(item.text_3 | safe) }} </p>
+<h3 class=""> {{ _(item.heading_1|safe) }} </h3>
+ <p class=""> {{ _(item.heading_2|safe) }} </p>
+ <p class=""> {{ _(item.text_1|safe) }} </p>
+ <p class=""> {{ _(item.text_2|safe) }} </p>
+ <p class=""> {{ _(item.text_3| safe) }} </p>
 {% endfor %}
