--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -13,12 +13,12 @@ author: ldodds
 items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-## YAML test
+## YAML test avec | safe
 
 {% for item in doc.items.content %}
-<h3 class=""> {{ _(item.heading_1|safe) }} </h3>
- <p class=""> {{ _(item.heading_2|safe) }} </p>
- <p class=""> {{ _(item.text_1|safe) }} </p>
- <p class=""> {{ _(item.text_2|safe) }} </p>
- <p class=""> {{ _(item.text_3| safe) }} </p>
+<h3 class=""> {{ _(item.heading_1 | safe) }} </h3>
+ <p class=""> {{ _(item.heading_2 | safe) }} </p>
+ <p class=""> {{ _(item.text_1 | safe) }} </p>
+ <p class=""> {{ _(item.text_2 | safe) }} </p>
+ <p class=""> {{ _(item.text_3 | safe) }} </p>
 {% endfor %}
