avec PO, sans PO

--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -13,7 +13,7 @@ author: ldodds
 items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-## YAML test avec | safe
+## YAML avec NL
 
 {% for item in doc.items.content %}
 <h3 class=""> {{ _(item.heading_1) }} </h3>
