--- a/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
@@ -13,12 +13,12 @@ author: ldodds
 items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-## YAML test sans | safe
+## YAML sans NL
 
 {% for item in doc.items.content %}
-<h3 class=""> {{ _(item.heading_1) }} </h3>
- <p class=""> {{ _(item.heading_2) }} </p>
- <p class=""> {{ _(item.text_1) }} </p>
- <p class=""> {{ _(item.text_2) }} </p>
- <p class=""> {{ _(item.text_3 | safe) }} </p>
+<h3 class=""> {{ item.heading_1 }} </h3>
+ <p class=""> {{ item.heading_2 }} </p>
+ <p class=""> {{ item.text_1 }} </p>
+ <p class=""> {{ item.text_2 }} </p>
+ <p class=""> {{ item.text_3 | safe }} </p>
 {% endfor %}
