added  safe; added test html for bucket

--- a/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
@@ -16,8 +16,8 @@ items: !g.yaml /shared/data/tutorial-p.yaml
 ## YAML sans NL
 
 {% for item in doc.items.content %}
-<h3 class=""> {{ item.heading_1 }} </h3>
- <p class=""> {{ item.heading_2 }} </p>
+<h3 class=""> {{ item.heading_1 | safe }} </h3>
+ <p class=""> {{ item.heading_2 | safe }} </p>
  <p class=""> {{ item.text_1 }} </p>
  <p class=""> {{ item.text_2 }} </p>
  <p class=""> {{ item.text_3 | safe }} </p>
