--- a/pages/content/amp-dev/documentation/tutorial-h/888/108.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/108.md
@@ -4,7 +4,7 @@ description@: 'Read about MathML'
 $order: 8
 ---
 
-
+{% do doc.amp_dependencies.add('amp-mathml', '0.1') %}
 <section>
 
 <div class="math-header">The Quadratic Formula</div>
