changed .html to .md; updated OWL link

--- a/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/103/a101.md
@@ -19,20 +19,21 @@ The most recent development in standard ontology languages is OWL from the World
 Here is a good primer on the basic concepts of OWL.
 
 <div class="wrapper">
-  <p>Select button to preview document</p>
-  <button style="background-color: #1f64ff; border: 0; color: #fff; padding: 9px 16px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; cursor:pointer;" type="button" on="tap:AMP.setState({ myIframeUrl: 'https://www.w3.org/TR/owl2-primer/' })" [hidden]="myIframeUrl">
-  OWL 2 Web Ontology Language Primer
+  <p>Select button to preview document (if delayed, tap F5 to reload)</p>
+  <button style="background-color: #1f64ff; border: 0; color: #fff; padding: 9px 16px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; cursor:pointer;" type="button" on="tap:AMP.setState({ myIframeUrl: 'https://docs.google.com/gview?url=https%3A%2F%2Fwww.w3.org%2F2012%2Fpdf%2FREC-owl2-overview-20121211.pdf&embedded=true' })" [hidden]="myIframeUrl">
+  OWL 2 Web Ontology Language Document Overview
   </button>
-  <amp-iframe sandbox="allow-scripts allow-same-origin" src="https://www.w3.org/TR/owl2-primer/" width="900" height="300" layout="responsive" [src]="myIframeUrl" [hidden]="!myIframeUrl" hidden>
+  <amp-iframe sandbox="allow-scripts allow-same-origin" src="https://google.com/" width="900" height="300" layout="responsive" [src]="myIframeUrl" [hidden]="!myIframeUrl" hidden>
     <amp-img placeholder layout="fill" src="https://ontomatica.io/static/image/oscars_placeholder_1.png"></amp-img>
   </amp-iframe>
   <div class="ap-o-sampler-link">
-    <a href="https://www.w3.org/TR/owl2-primer/" target="_blank" class="-n">
+    <a href="https://www.w3.org/2012/pdf/REC-owl2-overview-20121211.pdf" target="_blank" class="-n">
     <div class="ap-a-ico -i"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg></div>
     <span class="-r">Open target document</span>
     </a>
   </div>
 </div>
+
 
 OWL makes it possible to describe concepts in an unambiguous manner based on set theory and logic.
 Complex concepts can be built up out of simpler concepts.
