--- a/pages/content/amp-dev/documentation/tutorial-h/888/107.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/107.md
@@ -1,13 +1,7 @@
 ---
-$title: How ABC works
+$title@: How ABC works
+descriptions@: The following optimizations combined are the reason ABC pages are so fast they appear to load instantly.
 $order: 7
-descriptions: The following optimizations combined are the reason ABC pages are so fast they appear to load instantly. There are 7 reasons in total ...
-$view: /views/overview/custom-content.j2
-
-flyout:
-  format: websites
-  description: How ABC works
-  icon: guides-documents
 ---
 {% do doc.styles.addCssFile('css/components/templates/custom-content.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
