--- a/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-p/101/a101.md
@@ -18,7 +18,7 @@ items: !g.yaml /shared/data/tutorial-p.yaml
 {% for item in doc.items.content %}
 <h3 class=""> {{ item.heading_1 | safe }} </h3>
  <p class=""> {{ item.heading_2 | safe }} </p>
- <p class=""> {{ item.text_1) }} </p>
- <p class=""> {{ item.text_2) }} </p>
+ <p class=""> {{ item.text_1 }} </p>
+ <p class=""> {{ item.text_2 }} </p>
  <p class=""> {{ item.text_3 | safe }} </p>
 {% endfor %}
