--- a/pages/content/amp-dev/documentation/tutorial-h/888/107.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/107.md
@@ -1,31 +1,17 @@
 ---
-$title@: How ABC works
-descriptions@: The following optimizations combined are the reason ABC pages are so fast they appear to load instantly.
+$title@: "How ABC works"
+descriptions@: "The following optimizations combined are the reason ABC pages are so fast they appear to load instantly."
 $order: 7
 ---
 {% do doc.styles.addCssFile('css/components/templates/custom-content.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/code-snippet.css') %}
 
 <section class="ap--container">
-  {% do doc.styles.addCssFile('/css/components/molecules/jumbo.css') %}
-  <div class="ap-m-jumbo">
-    <div class="ap-a-ico">
-      {% do doc.icons.useIcon('/icons/code-architecture.svg') %}
-      <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#code-architecture"></use></svg>
-    </div>
-    <h1 class="ap-m-jumbo-headline">{{ _('How ABC works') }}</h1>
-    <p class="ap-m-jumbo-copy">{{ _('The following optimizations combined are the reason ABC pages are so fast they appear to load instantly. There are 7 reasons in total - but if that’s still too much to read, simply watch the explainer video:') }}</p>
-
-    {% do doc.styles.addCssFile('css/components/atoms/video.css') %}
-    <figure class="ap-a-video">
-      <amp-youtube class="ap-a-video-video" data-videoid="9Cfxm7cikMY" layout="responsive" width="16" height="9"></amp-youtube>
-    </figure>
-  </div>
 
   {% do doc.styles.addCssFile('/css/components/molecules/copy.css') %}
   <div class="ap-m-copy ap-m-copy-left-small">
     <h2>{{ _('Execute all ABC JavaScript asynchronously') }}</h2>
-    <p>{{ _('JavaScript is powerful, it can modify just about every aspect of the page, but it can also block DOM construction and delay page rendering (see also <a href="https://developers.google.com/web/fundamentals/performance/critical-rendering-path/adding-interactivity-with-javascript">Adding interactivity with JavaScript</a>). To keep JavaScript from delaying page rendering, ABC allows only asynchronous JavaScript.') }} </p>
+    <p>{{ _('JavaScript is powerful, it can modify just about every aspect of the page, but it can also block DOM construction and delay page rendering (see also <a href="https://developers.google.com/web/fundamentals/performance/critical-rendering-path/adding-interactivity-with-javascript">Adding interactivity with JavaScript</a>). To keep JavaScript from delaying page rendering, ABC allows only asynchronous JavaScript.') }}</p>
     <p>{{ _('ABC components may have JavaScript under the hood, but they’re carefully designed to make sure they don’t cause performance degradation. ') }}</p>
     <p>{{ _('While custom JS is allowed in <a href="../documentation/components/reference/amp-script.md"><code>amp-script</code></a>, and third-party JS is allowed in iframes, it cannot block rendering. For example, if third-party JS uses the <a href="http://www.stevesouders.com/blog/2012/04/10/dont-docwrite-scripts/">super-bad-for-performance <code>document.write</code> API</a>, it does not block rendering the main page.') }}</p>
   </div>
