--- a/pages/content/amp-dev/documentation/tutorial-h/888/107.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/888/107.md
@@ -1,6 +1,6 @@
 ---
-$title@: "How ABC works"
-descriptions@: "The following optimizations combined are the reason ABC pages are so fast they appear to load instantly."
+$title@: 'How ABC works'
+descriptions@: 'The following optimizations combined are the reason ABC pages are so fast they appear to load instantly.'
 $order: 7
 ---
 {% do doc.styles.addCssFile('css/components/templates/custom-content.css') %}
