--- a/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
@@ -13,7 +13,7 @@ items: !g.yaml /shared/data/tutorial-p.yaml
 
 ## Summary
 
-In order to follow this tutorial, you must have &#x0050;&#x0072;&#x006F;&#x0074;&#x00E9;&#x0067;&#x00E9;&#x000A; 5, which is available from the Protégé website and some of the Protégé Plugins which will be described in more detail below.
+In order to follow this tutorial, you must have Protégé 5, which is available from the Protégé website and some of the Protégé Plugins which will be described in more detail below.
 
 ***
 
