--- a/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
@@ -1,6 +1,6 @@
 ---
-$title@: 'Requirements and Protégé User Interface'
-description@: 'Requirements and Protégé'
+$title@: 'Requirements and &#x0050;&#x0072;&#x006F;&#x0074;&#x00E9;&#x0067;&#x00E9;&#x000A; User Interface'
+description@: 'Requirements and &#x0050;&#x0072;&#x006F;&#x0074;&#x00E9;&#x0067;&#x00E9;&#x000A;'
 $titles:
   teaser@: Chapter 2
 teaser:
@@ -13,15 +13,11 @@ items: !g.yaml /shared/data/tutorial-p.yaml
 
 ## Summary
 
-In order to follow this tutorial, you must have Protégé 5, which is available from the Protégé website and some of the Protégé Plugins which will be described in more detail below.
+In order to follow this tutorial, you must have &#x0050;&#x0072;&#x006F;&#x0074;&#x00E9;&#x0067;&#x00E9;&#x000A; 5, which is available from the Protégé website and some of the Protégé Plugins which will be described in more detail below.
 
+***
 
-## Testing substitution - single line
-
-### {% for item in doc.items.content %}{{ item.heading_1 | safe }}{% endfor %}
-
-
-## Testing substitution - second line
+## Testing substitution second line
 
 ###
 {% for item in doc.items.content %}{{ item.heading_1 | safe }}{% endfor %}
