--- a/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
@@ -1,6 +1,6 @@
 ---
-$title@: 'Requirements and &#x0050;&#x0072;&#x006F;&#x0074;&#x00E9;&#x0067;&#x00E9;&#x000A; User Interface'
-description@: 'Requirements and &#x0050;&#x0072;&#x006F;&#x0074;&#x00E9;&#x0067;&#x00E9;&#x000A;'
+$title@: 'Requirements and Protégé User Interface'
+description@: 'Requirements and Protégé'
 $titles:
   teaser@: Chapter 2
 teaser:
@@ -19,5 +19,4 @@ In order to follow this tutorial, you must have &#x0050;&#x0072;&#x006F;&#x0074;
 
 ## Testing substitution second line
 
-###
-{% for item in doc.items.content %}{{ item.heading_1 | safe }}{% endfor %}
+### {% for item in doc.items.content %}{{ item.heading_1 | safe }}{% endfor %}
