--- a/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
@@ -13,12 +13,12 @@ author: ldodds
 items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
-## YAML sans NL
+## YAML sans NL using 'for x'
 
-{% for item in doc.items.content %}
-<h3 class=""> {{ item.heading_1 | safe }} </h3>
- <p class=""> {{ item.heading_2 | safe }} </p>
- <p class=""> {{ item.text_1 }} </p>
- <p class=""> {{ item.text_2 }} </p>
- <p class=""> {{ item.text_3 | safe }} </p>
+{% for x in doc.items.content %}
+<h3 class=""> {{ x.heading_1 | safe }} </h3>
+ <p class=""> {{ x.heading_2 | safe }} </p>
+ <p class=""> {{ x.text_1 }} </p>
+ <p class=""> {{ x.text_2 }} </p>
+ <p class=""> {{ x.text_3 | safe }} </p>
 {% endfor %}
