--- a/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/101/a101.md
@@ -1,15 +1,17 @@
 ---
-$title@: Introduction
+$title@: 'Introduction'
 description@: 'Read the introduction'
 teaser:
   icon: airplane
-  label@: Introduction
+  label@: 'Introduction'
 $titles:
-  teaser@: Chapter 1
+  teaser@: 'Chapter 1'
 $order: 1
 formats:
   - websites
 author: ldodds
+contributors:
+  - jaygra0919
 items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
