--- a/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
@@ -8,6 +8,8 @@ teaser:
   label@: Requirements
 $order: 1
 author: ldodds
+contributors:
+  - jaygra0919
 items: !g.yaml /shared/data/tutorial-p.yaml
 ---
 
