--- a/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
+++ b/pages/content/amp-dev/documentation/tutorial-h/102/a101.md
@@ -19,6 +19,6 @@ In order to follow this tutorial, you must have &#x0050;&#x0072;&#x006F;&#x0074;
 
 ***
 
-## Testing substitution second line
+## Testing substitution sans NL second line
 
-### {% for item in doc.items.content %}{{ item.heading_1 | safe }}{% endfor %}
+###  {% for item in doc.items.content %}{{ item.heading_1 | safe }}{% endfor %}
